--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [build-system]
 requires = [
-    "setuptools>=61.0",
-    "torch>=2",
+    "setuptools >= 61.0",
+    "torch >= 2",
     "numpy",
 ]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "quiptools_cuda"
-version = "0.0.1"
+version = "1.0.2"
 authors = [
   { name="Albert Tseng", email="albert@cs.cornell.edu" },
   { name="Jerry Chee", email="JerryChee@cs.cornell.edu" },
@@ -22,6 +22,7 @@ requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
+    "Operating System :: Unix",
 ]
 dependencies = [
     "torch >= 2",
